[package]
name = "rust-graphql"
version = "0.1.0"
authors = ["Ronan <ronan_mccabe@protonmail.com>"]
edition = "2018"

[dependencies]
juniper = { version = "0.11.1", default-features = false, features = ["expose-test-schema", "serde_json"] }
juniper_warp = "0.2.0"
warp = "0.1.10"
reqwest = "0.9.5"
serde = "1.0.84"
serde_derive = "1.0.84"
base64 = "0.10.0"

[[bin]]
name = "rust-graphql"
path = "src/main.rs"
